@@ -43,7 +43,7 @@ EXTRA_DIST = CHANGES CREDITS Doxyheader INSTALL cpuinfo.yaml \
 	rpm.magic rpmqv.c \
 	python/mpw/Makefile.am python/mpw/test/* python/test/resources/* python/test/dscmp \
 	python/test/psTest.py python/test/testhdr python/test/testit python/test/testmi \
-	python/test/testrollback.py python/test/dsMerge.py \
+	python/test/testrollback.py python/test/dsMerge.py python/test/test_rpm.py \
 	python/rpm/__init__.py python/[a-z]* python/Makefile.in python/Makefile.am \
 	tests/cudf-test-1-0.src.rpm \
 	tests/devtool-sanity-1.0-1.src.rpm \
