@@ -1,4 +1,5 @@
 5.2.0 -> 5.2.1:
+    - proyvind: python: start on implementing proper regression tests.
     - proyvind: js: fix internal build on Linux.
     - proyvind: filetriggers: fix missing file suffix for scripts. (from unity linux).
     - proyvind: rpm4compat: add wrappers for renamed rpmdb*->rpmmi* functions.
